# wandb_example

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  sweep_opt.yaml
notebooks/: eval.ipynb
scripts/: default.sh  sweep.sh  train.sh
src/wandb_example/: datasets.py  eval.py  metrics.py  models.py  train.py  utils.py
