[project]
name = "wandb-example"
version = "0.1.0"
description = "Usage example of Weights & Biases."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
